--- a/catalog.html
+++ b/catalog.html
@@ -44,35 +44,40 @@
 
         <div class="wrapper">
             <div class="sidebar">
-                <ul class="menu">
-                    <li><a href="index.html"><span>c</span>Поточний чек</a></li>
-                    <li><a href="work_with_check.html"><span>e</span>Робота з чеком</a></li>
-                    <li><a href="documents.html"><span>d</span>Документи</a></li>
-                    <li><a href="cassa.html"><span>a</span>Каса</a></li>
-                    <li><a href="admin.html"><span>c</span>Службові</a></li>
-                    <li><a href="#"><span>b</span>Звіти</a></li>
-                </ul>
+                <div class="menu">
+                    <button class="menu_btn" onclick="location.href='index.html' "><span>c</span>
+                        <br>Поточний чек</button>
+                    <button class="menu_btn" onclick="location.href='work_with_check.html' "><span>e</span>
+                        <br>Робота з чеком</button>
+                    <button class="menu_btn" onclick="location.href='documents.html' "><span>d</span>
+                        <br>Документи</button>
+                    <button class="menu_btn" onclick="location.href='cassa.html' "><span>a</span>
+                        <br>Каса</button>
+                    <button class="menu_btn" onclick="location.href='admin.html' "><span>c</span>
+                        <br>Службові
+                    </button>
+                    <button class="menu_btn" onclick="location.href='#' "><span>b</span>
+                        <br>Звіти</button>
+                </div>
                 <div class="substrate"></div>
             </div>
-            <div class="catalog">
-                <div class="bread_crumbs">
+            <div class="main">
+                <div class="catalog">
+                    <div class="bread_crumbs">
 
-                    <a href="#">В початок >    </a></l1>
-                    <a href="#">Дитяче харчування >    </a></l1>
-                    <a href="#">Смачне</a></l1>
+                        <a href="#">В початок  >  </a></l1>
+                        <a href="#">Дитяче харчування  >  </a></l1>
+                        <a href="#">Смачне</a></l1>
+                    </div>
+                    <button class="btn_shape">Растішка</button>
+                    <button class="btn_shape">Несквік</button>
+                    <button class="btn_shape">Фрутоняня</button>
+                    <button class="btn_shape">Котлети</button>
+                    <button class="btn_shape">Кока-Кола</button>
+                    <button class="btn_shape">Чіпси</button>
                 </div>
-                <button>Растішка</button>
-                <button>Несквік</button>
-                <button>Фрутоняня</button>
-                <button>Котлети</button>
-                <button>Кока-Кола</button>
-                <button>Чіпси</button>
-
-
-
             </div>
-
-
+        </div>
     </body>
 
 </html>
