--- a/admin.html
+++ b/admin.html
@@ -42,26 +42,34 @@
 
         <div class="wrapper">
             <div class="sidebar">
-                <ul class="menu">
-                    <li><a href="index.html"><span>c</span>Поточний чек</a></li>
-                    <li><a href="work_with_check.html"><span>e</span>Робота з чеком</a></li>
-                    <li><a href="documents.html"><span>d</span>Документи</a></li>
-                    <li><a href="cassa.html"><span>a</span>Каса</a></li>
-                    <li><a href="admin.html" class="active"><span>c</span>Службові</a></li>
-                    <li><a href="#"><span>b</span>Звіти</a></li>
-                </ul>
+                <div class="menu">
+                    <button class="menu_btn" onclick="location.href='index.html' "><span>c</span>
+                        <br>Поточний чек</button>
+                    <button class="menu_btn" onclick="location.href='work_with_check.html' "><span>e</span>
+                        <br>Робота з чеком</button>
+                    <button class="menu_btn" onclick="location.href='documents.html' "><span>d</span>
+                        <br>Документи</button>
+                    <button class="menu_btn" onclick="location.href='cassa.html' "><span>a</span>
+                        <br>Каса</button>
+                    <div class="active">
+                        <button class="menu_btn" onclick="location.href='admin.html' "><span>c</span>
+                            <br>Службові
+                        </button>
+                    </div>
+                    <button class="menu_btn" onclick="location.href='#' "><span>b</span>
+                        <br>Звіти</button>
+                </div>
                 <div class="substrate"></div>
             </div>
-            <div class="category">
-                <button>Адміністрування</button>
-                <button>Налаштування</button>
-                <button>Довідка</button>
-
-
-
+            <div class="main">
+                <div class="category">
+                    <button class="btn_shape">Адміністрування</button>
+                    <button class="btn_shape">Налаштування</button>
+                    <button class="btn_shape">Довідка</button>
+                </div>
             </div>
 
-
+        </div>
     </body>
 
 </html>
