--- a/view.html
+++ b/view.html
@@ -44,32 +44,38 @@
 
         <div class="wrapper">
             <div class="sidebar">
-                <ul class="menu">
-                    <li><a href="index.html"><span>c</span>Поточний чек</a></li>
-                    <li>
-                        <a href="work_with_check.html"><span>e</span>Робота з чеком</a></a>
-                    </li>
-                    <li><a href="documents.html"><span>d</span>Документи</a></li>
-                    <li><a href="cassa.html"><span>a</span>Каса</a></li>
-                    <li><a href="admin.html"><span>c</span>Службові</a></li>
-                    <li><a href="#"><span>b</span>Звіти</a></li>
-                </ul>
+                <div class="menu">
+                    <button class="menu_btn" onclick="location.href='index.html' "><span>c</span>
+                        <br>Поточний чек</button>
+                    <button class="menu_btn" onclick="location.href='work_with_check.html' "><span>e</span>
+                        <br>Робота з чеком</button>
+                    <button class="menu_btn" onclick="location.href='documents.html' "><span>d</span>
+                        <br>Документи</button>
+                    <button class="menu_btn" onclick="location.href='cassa.html' "><span>a</span>
+                        <br>Каса</button>
+                    <button class="menu_btn" onclick="location.href='admin.html' "><span>c</span>
+                        <br>Службові
+                    </button>
+                    <button class="menu_btn" onclick="location.href='#' "><span>b</span>
+                        <br>Звіти</button>
+                </div>
                 <div class="substrate"></div>
             </div>
-            <div class="view_settings">
-                <p>Параметри відображення:</p>
+            <div class="main">
+                <div class="view_settings">
+                    <p>Параметри відображення:</p>
 
-                <input type="radio" id="1view" name="view" onclick="location.href='index.html' ">
-                <label for="1view">Кількість - Сума</label>
-                <input type="radio" id="2view" name="view" onclick="location.href='index.html' ">
-                <label for="2view">Ціна - Кількість - Сума</label>
-                <input type="radio" id="3view" name="view" onclick="location.href='index.html' ">
-                <label for="3view">Од. Вим - Кількість - Сума</label>
-                <input type="radio" id="4view" name="view" onclick="location.href='index.html' ">
-                <label for="4view">Кількість - Сума - Знижка</label>
-                <input type="radio" id="5view" name="view" onclick="location.href='index.html' ">
-                <label for="5view">Кількість - Сума - Залишок</label>
-
+                    <input type="radio" id="1view" name="view" onclick="location.href='index.html' ">
+                    <label class="btn_shape" for="1view">Кількість - Сума</label>
+                    <input type="radio" id="2view" name="view" onclick="location.href='index.html' ">
+                    <label class="btn_shape" for="2view">Ціна - Кількість - Сума</label>
+                    <input type="radio" id="3view" name="view" onclick="location.href='index.html' ">
+                    <label class="btn_shape" for="3view">Од. Вим - Кількість - Сума</label>
+                    <input type="radio" id="4view" name="view" onclick="location.href='index.html' ">
+                    <label class="btn_shape" for="4view">Кількість - Сума - Знижка</label>
+                    <input type="radio" id="5view" name="view" onclick="location.href='index.html' ">
+                    <label class="btn_shape" for="5view">Кількість - Сума - Залишок</label>
+                </div>
             </div>
 
         </div>
